# changelog-d

./: .travis.yml  README.md  cabal.project  changelog-d.cabal
changelog.d/: config  initial  second-entry
cli/: Main.hs
src/: ChangelogD.hs  ParsecError.hs  ParsecUtils.hs
